--- a/app/src/main/res/layout/activity_memories.xml
+++ b/app/src/main/res/layout/activity_memories.xml
@@ -26,7 +26,7 @@
                 android:layout_width="390dp"
                 android:layout_height="269dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="36dp"
                 android:layout_marginEnd="20dp"
                 android:onClick="selectImage"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -128,14 +128,14 @@
                 app:layout_constraintHorizontal_bias="0.501"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/poemText"
-                app:layout_constraintVertical_bias="0.314" />
+                app:layout_constraintVertical_bias="0.13" />
 
             <Button
                 android:id="@+id/deleteButton"
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="120dp"
                 android:layout_height="60dp"
-                android:layout_marginTop="55dp"
+                android:layout_marginTop="25dp"
                 android:layout_marginBottom="55dp"
                 android:backgroundTint="#115DCD"
                 android:onClick="deleteButtonClicked"
@@ -145,8 +145,28 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.501"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/saveButton" />
+                app:layout_constraintTop_toBottomOf="@+id/saveButton"
+                app:layout_constraintVertical_bias="0.13999999" />
+
+            <Button
+                android:id="@+id/updateButton"
+                android:layout_width="120dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="40dp"
+                android:backgroundTint="#115DCD"
+                android:onClick="updateButtonClicked"
+                android:text="UPDATE"
+                android:textColor="#000000"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.501"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/deleteButton"></Button>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
